--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,400;1,300&family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/reset.css" />
   </head>
@@ -16,16 +21,44 @@
           </a>
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__item"><a href="#" class="menu__link"></a></li>
-              <li class="menu__item"><a href="#" class="menu__link"></a></li>
-              <li class="menu__item"><a href="#" class="menu__link"></a></li>
-              <li class="menu__item"><a href="#" class="menu__link"></a></li>
-              <li class="menu__item"><a href="#" class="menu__link"></a></li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Black</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Green</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">White</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Oolong</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Pu-erh</a>
+              </li>
             </ul>
           </nav>
+          <ul class="user-actions">
+            <li class="user-actions__item">
+              <a href="#" class="user-actions__link"
+                ><img src="images/cart.svg" alt=""
+              /></a>
+            </li>
+            <li class="user-actions__item">
+              <a href="#" class="user-actions__link"
+                ><img src="images/user.svg" alt=""
+              /></a>
+            </li>
+            <li class="user-actions__item user-actions__item-search">
+              <a href="#" class="user-actions__link"
+                ><img src="images/search.svg" alt=""
+              /></a>
+            </li>
+          </ul>
         </div>
       </div>
     </header>
+    <main class="main"></main>
     <script src="js/main.js"></script>
   </body>
 </html>
