--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/reset.css" />
   </head>
   <body>
+    <div class="menu--close"></div>
     <header class="header">
       <div class="container">
         <div class="header__inner">
@@ -119,6 +120,34 @@
           our loved ones."
         </p>
       </blockquote>
+
+      <section class="assortment">
+        <div class="container">
+          <h2 class="assortment__title">Explore our Collections</h2>
+          <ul class="assortment__list">
+            <li class="assortment__item">
+              <img src="images/black.jpg" alt="" class="assortment__img" />
+              <p class="assortment__name">Black</p>
+            </li>
+            <li class="assortment__item">
+              <img src="images/green.jpg" alt="" class="assortment__img" />
+              <p class="assortment__name">Green</p>
+            </li>
+            <li class="assortment__item">
+              <img src="images/white.jpg" alt="" class="assortment__img" />
+              <p class="assortment__name">White</p>
+            </li>
+            <li class="assortment__item">
+              <img src="images/oolong.jpg" alt="" class="assortment__img" />
+              <p class="assortment__name">Oolong</p>
+            </li>
+            <li class="assortment__item">
+              <img src="images/pu-erh.jpg" alt="" class="assortment__img" />
+              <p class="assortment__name">Pu-erh</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <script src="js/main.js"></script>
   </body>
