--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 type="email"
                 placeholder="name@email.com" />
               <button class="mailing-list__btn" type="submit">Join</button>
-              <label>
+              <label class="mailing-list__label">
                 <input class="checkbox" type="checkbox" />
                 <span class="checkbox-style"></span>
                 <p class="checkbox__text">
