--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
       <section class="main-blog">
         <div class="container">
-          <h2 class="title">Our Tea Blog</h2>
+          <h2 class="title main-blog__title">Our Tea Blog</h2>
           <ul class="main-blog__list">
             <li class="main-blog__item">
               <img src="images/blog-1.jpg" alt="" class="main-blog__item-img" />
@@ -286,7 +286,7 @@
 
       <section class="priorities">
         <div class="container">
-          <h2 class="title">We Priorities</h2>
+          <h2 class="title priorities__title--title">We Priorities</h2>
           <ul class="priorities__list">
             <li class="priorities__item">
               <h4 class="priorities__title">Single garden teas</h4>
